[gd_scene load_steps=82 format=3 uid="uid://djlic05xcybg7"]

[ext_resource type="Script" uid="uid://bqyrjv84ntlq2" path="res://Player/Scripts/the_masked.gd" id="1_amb87"]
[ext_resource type="Texture2D" uid="uid://b2njxi0otob80" path="res://Player/Assets/base_idle.png" id="2_bf0wb"]
[ext_resource type="Texture2D" uid="uid://fba3gw4clpv6" path="res://Player/Assets/mask0_run.png" id="3_bf0wb"]
[ext_resource type="Texture2D" uid="uid://bocileidreb8i" path="res://Player/Assets/mask1_idle.png" id="3_x7yi0"]
[ext_resource type="Texture2D" uid="uid://bs8yb3vjtxryt" path="res://Player/Assets/mask2_idle.png" id="4_8ttrq"]
[ext_resource type="Texture2D" uid="uid://hhh6qcqd7yct" path="res://Player/Assets/mask3_idle.png" id="5_v6b26"]
[ext_resource type="Texture2D" uid="uid://dhefwfjgudc2" path="res://Player/Assets/mask1_run.png" id="7_v6b26"]
[ext_resource type="Texture2D" uid="uid://b88sitlf36rnx" path="res://Player/Assets/mask2_run.png" id="8_pmt53"]
[ext_resource type="Texture2D" uid="uid://dehapxgmje6sa" path="res://Player/Assets/mask3_run.png" id="9_04w6v"]
[ext_resource type="Texture2D" uid="uid://ee4vfli2pj3v" path="res://Player/Assets/mask_transtion.png" id="10_o5xbi"]
[ext_resource type="AudioStream" uid="uid://dbogbpxf6505x" path="res://Player/Sfx/glitch-sound-effect-hd-379466.mp3" id="11_pmt53"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3o2bt"]
atlas = ExtResource("2_bf0wb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_40ogb"]
atlas = ExtResource("2_bf0wb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn5ks"]
atlas = ExtResource("2_bf0wb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7yi0"]
atlas = ExtResource("2_bf0wb")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mickh"]
atlas = ExtResource("2_bf0wb")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ttrq"]
atlas = ExtResource("2_bf0wb")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6b26"]
atlas = ExtResource("2_bf0wb")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmt53"]
atlas = ExtResource("2_bf0wb")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_amkp3"]
atlas = ExtResource("3_x7yi0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r31ff"]
atlas = ExtResource("3_x7yi0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohe3e"]
atlas = ExtResource("3_x7yi0")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg1uh"]
atlas = ExtResource("3_x7yi0")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5p38"]
atlas = ExtResource("3_x7yi0")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtwd2"]
atlas = ExtResource("3_x7yi0")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k01cs"]
atlas = ExtResource("3_x7yi0")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuu3b"]
atlas = ExtResource("3_x7yi0")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nld6h"]
atlas = ExtResource("4_8ttrq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7sl2"]
atlas = ExtResource("4_8ttrq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo6af"]
atlas = ExtResource("4_8ttrq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1o2y"]
atlas = ExtResource("4_8ttrq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pjv5"]
atlas = ExtResource("4_8ttrq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7gc8"]
atlas = ExtResource("4_8ttrq")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4kl6"]
atlas = ExtResource("4_8ttrq")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc8pe"]
atlas = ExtResource("4_8ttrq")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfv6p"]
atlas = ExtResource("5_v6b26")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4crb"]
atlas = ExtResource("5_v6b26")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8asab"]
atlas = ExtResource("5_v6b26")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyrvf"]
atlas = ExtResource("5_v6b26")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn51d"]
atlas = ExtResource("5_v6b26")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j1r7"]
atlas = ExtResource("5_v6b26")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b00k2"]
atlas = ExtResource("5_v6b26")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h34e"]
atlas = ExtResource("5_v6b26")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_04w6v"]
atlas = ExtResource("3_bf0wb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5xbi"]
atlas = ExtResource("3_bf0wb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j57fr"]
atlas = ExtResource("3_bf0wb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ng0x"]
atlas = ExtResource("3_bf0wb")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkviy"]
atlas = ExtResource("3_bf0wb")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8o"]
atlas = ExtResource("3_bf0wb")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_idnpm"]
atlas = ExtResource("3_bf0wb")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_80611"]
atlas = ExtResource("3_bf0wb")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqsxv"]
atlas = ExtResource("7_v6b26")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwv8a"]
atlas = ExtResource("7_v6b26")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfk7j"]
atlas = ExtResource("7_v6b26")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_coacb"]
atlas = ExtResource("7_v6b26")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwmwj"]
atlas = ExtResource("7_v6b26")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1de0"]
atlas = ExtResource("7_v6b26")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qr2w"]
atlas = ExtResource("7_v6b26")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgyma"]
atlas = ExtResource("7_v6b26")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd7xh"]
atlas = ExtResource("8_pmt53")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_scqyq"]
atlas = ExtResource("8_pmt53")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4dwh"]
atlas = ExtResource("8_pmt53")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb8bk"]
atlas = ExtResource("8_pmt53")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_34xcx"]
atlas = ExtResource("8_pmt53")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1suwl"]
atlas = ExtResource("8_pmt53")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ses"]
atlas = ExtResource("8_pmt53")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nexuy"]
atlas = ExtResource("8_pmt53")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8wlw"]
atlas = ExtResource("9_04w6v")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gps84"]
atlas = ExtResource("9_04w6v")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bggkh"]
atlas = ExtResource("9_04w6v")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ty7f"]
atlas = ExtResource("9_04w6v")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_onpyi"]
atlas = ExtResource("9_04w6v")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcfl0"]
atlas = ExtResource("9_04w6v")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aht8k"]
atlas = ExtResource("9_04w6v")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1svo"]
atlas = ExtResource("9_04w6v")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_04w6v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o2bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40ogb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn5ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7yi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mickh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ttrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6b26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmt53")
}],
"loop": false,
"name": &"Idle-mask0",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_amkp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r31ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohe3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg1uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5p38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtwd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k01cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuu3b")
}],
"loop": false,
"name": &"Idle-mask1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nld6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7sl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo6af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1o2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pjv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7gc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4kl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc8pe")
}],
"loop": false,
"name": &"Idle-mask2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfv6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4crb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8asab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyrvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn51d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j1r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b00k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h34e")
}],
"loop": false,
"name": &"Idle-mask3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04w6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5xbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j57fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ng0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkviy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2e8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idnpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80611")
}],
"loop": false,
"name": &"Run-mask0",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqsxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwv8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfk7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coacb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwmwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1de0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qr2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgyma")
}],
"loop": false,
"name": &"Run-mask1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd7xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scqyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4dwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb8bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34xcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1suwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ses")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nexuy")
}],
"loop": false,
"name": &"Run-mask2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8wlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gps84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bggkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ty7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onpyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcfl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aht8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1svo")
}],
"loop": false,
"name": &"Run-mask3",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqsxv"]
size = Vector2(25, 55.652176)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0dqf"]
atlas = ExtResource("10_o5xbi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_malja"]
atlas = ExtResource("10_o5xbi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbf3c"]
atlas = ExtResource("10_o5xbi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_amkp3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0dqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_malja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbf3c")
}],
"loop": false,
"name": &"Mask-Transition",
"speed": 10.0
}]

[node name="The Masked" type="CharacterBody2D"]
script = ExtResource("1_amb87")

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_04w6v")
animation = &"Idle-mask3"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.0000002)
scale = Vector2(1, 1.078125)
shape = SubResource("RectangleShape2D_dqsxv")

[node name="MaskAnimation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-2.000004, 7.999999)
scale = Vector2(1.71875, 1.4375)
sprite_frames = SubResource("SpriteFrames_amkp3")
animation = &"Mask-Transition"

[node name="MaskTransitionSound" type="AudioStreamPlayer2D" parent="MaskAnimation"]
stream = ExtResource("11_pmt53")
bus = &"Sfx"
